人口データの読み込み

--- a/test.ipynb
+++ b/test.ipynb
@@ -2,28 +2,88 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import findspark\n",
+    "findspark.init(\"/opt/homebrew/opt/apache-spark/libexec/\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "2"
+       "982"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "1+1"
+    "df = spark.read.option(\"multiLine\",\"true\").option(\"encoding\",\"SJIS\").csv(\"/Users/isomasaki/pyspark_batch/dataset/jinko.csv\",header=True,sep=\",\",inferSchema=False)\n",
+    "df.count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+----+----------+----------+----+------------+----------+----------+\n",
+      "|都道府県コード|都道府県名|元号|和暦（年）|西暦（年）|注  |人口（総数）|人口（男）|人口（女）|\n",
+      "+--------------+----------+----+----------+----------+----+------------+----------+----------+\n",
+      "|00            |全国      |大正|9         |1920      |null|55963053    |28044185  |27918868  |\n",
+      "|01            |北海道    |大正|9         |1920      |null|2359183     |1244322   |1114861   |\n",
+      "|02            |青森県    |大正|9         |1920      |null|756454      |381293    |375161    |\n",
+      "|03            |岩手県    |大正|9         |1920      |null|845540      |421069    |424471    |\n",
+      "|04            |宮城県    |大正|9         |1920      |null|961768      |485309    |476459    |\n",
+      "|05            |秋田県    |大正|9         |1920      |null|898537      |453682    |444855    |\n",
+      "|06            |山形県    |大正|9         |1920      |null|968925      |478328    |490597    |\n",
+      "|07            |福島県    |大正|9         |1920      |null|1362750     |673525    |689225    |\n",
+      "|08            |茨城県    |大正|9         |1920      |null|1350400     |662128    |688272    |\n",
+      "|09            |栃木県    |大正|9         |1920      |null|1046479     |514255    |532224    |\n",
+      "|10            |群馬県    |大正|9         |1920      |null|1052610     |514106    |538504    |\n",
+      "|11            |埼玉県    |大正|9         |1920      |null|1319533     |641161    |678372    |\n",
+      "|12            |千葉県    |大正|9         |1920      |null|1336155     |656968    |679187    |\n",
+      "|13            |東京都    |大正|9         |1920      |null|3699428     |1952989   |1746439   |\n",
+      "|14            |神奈川県  |大正|9         |1920      |null|1323390     |689751    |633639    |\n",
+      "|15            |新潟県    |大正|9         |1920      |null|1776474     |871532    |904942    |\n",
+      "|16            |富山県    |大正|9         |1920      |null|724276      |354775    |369501    |\n",
+      "|17            |石川県    |大正|9         |1920      |null|747360      |364375    |382985    |\n",
+      "|18            |福井県    |大正|9         |1920      |null|599155      |293181    |305974    |\n",
+      "|19            |山梨県    |大正|9         |1920      |null|583453      |290817    |292636    |\n",
+      "+--------------+----------+----+----------+----------+----+------------+----------+----------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.show(truncate=False)\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 64-bit",
+   "display_name": "Python 3.9.1 64-bit ('3.9.1')",
    "language": "python",
    "name": "python3"
   },
@@ -37,12 +97,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.1"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+    "hash": "cc7d8ad7bcba743a950284a9d2689718111e12ebf705e68eb2847164e6b44765"
    }
   }
  },
