単純集計の追加

--- a/test.ipynb
+++ b/test.ipynb
@@ -79,6 +79,219 @@
    "source": [
     "df.show(truncate=False)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------------+----------+-----+----------+----------+----+------------+----------+------------+\n",
+      "|          code|    kenmei|gengo|    wareki|   seireki| chu|       sokei|jinko_male|jinko_female|\n",
+      "+--------------+----------+-----+----------+----------+----+------------+----------+------------+\n",
+      "|都道府県コード|都道府県名| 元号|和暦（年）|西暦（年）|  注|人口（総数）|人口（男）|  人口（女）|\n",
+      "|            00|      全国| 大正|         9|      1920|null|    55963053|  28044185|    27918868|\n",
+      "|            01|    北海道| 大正|         9|      1920|null|     2359183|   1244322|     1114861|\n",
+      "|            02|    青森県| 大正|         9|      1920|null|      756454|    381293|      375161|\n",
+      "|            03|    岩手県| 大正|         9|      1920|null|      845540|    421069|      424471|\n",
+      "|            04|    宮城県| 大正|         9|      1920|null|      961768|    485309|      476459|\n",
+      "|            05|    秋田県| 大正|         9|      1920|null|      898537|    453682|      444855|\n",
+      "|            06|    山形県| 大正|         9|      1920|null|      968925|    478328|      490597|\n",
+      "|            07|    福島県| 大正|         9|      1920|null|     1362750|    673525|      689225|\n",
+      "|            08|    茨城県| 大正|         9|      1920|null|     1350400|    662128|      688272|\n",
+      "|            09|    栃木県| 大正|         9|      1920|null|     1046479|    514255|      532224|\n",
+      "|            10|    群馬県| 大正|         9|      1920|null|     1052610|    514106|      538504|\n",
+      "|            11|    埼玉県| 大正|         9|      1920|null|     1319533|    641161|      678372|\n",
+      "|            12|    千葉県| 大正|         9|      1920|null|     1336155|    656968|      679187|\n",
+      "|            13|    東京都| 大正|         9|      1920|null|     3699428|   1952989|     1746439|\n",
+      "|            14|  神奈川県| 大正|         9|      1920|null|     1323390|    689751|      633639|\n",
+      "|            15|    新潟県| 大正|         9|      1920|null|     1776474|    871532|      904942|\n",
+      "|            16|    富山県| 大正|         9|      1920|null|      724276|    354775|      369501|\n",
+      "|            17|    石川県| 大正|         9|      1920|null|      747360|    364375|      382985|\n",
+      "|            18|    福井県| 大正|         9|      1920|null|      599155|    293181|      305974|\n",
+      "+--------------+----------+-----+----------+----------+----+------------+----------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "#日本語のカラム名をローマ字へ変換\n",
+    "from pyspark.sql.types import StructType,StructField,StringType\n",
+    "from pyspark.sql.functions import col\n",
+    "\n",
+    "struct = StructType([\n",
+    "    StructField(\"code\",StringType(),False),\n",
+    "    StructField(\"kenmei\",StringType(),False),\n",
+    "    StructField(\"gengo\",StringType(),False),\n",
+    "    StructField(\"wareki\",StringType(),False),\n",
+    "    StructField(\"seireki\",StringType(),False),\n",
+    "    StructField(\"chu\",StringType(),False),\n",
+    "    StructField(\"sokei\",StringType(),False),\n",
+    "    StructField(\"jinko_male\",StringType(),False),\n",
+    "    StructField(\"jinko_female\",StringType(),False)\n",
+    "])\n",
+    "\n",
+    "df = spark.read.option(\"multiLine\",\"true\").option(\"encoding\",\"SJIS\") \\\n",
+    ".csv(\"/Users/isomasaki/pyspark_batch/dataset/jinko.csv\",header=False,sep=\",\",inferSchema=False,schema=struct)\n",
+    "df.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----+----------------------+-----+------+-------+----+---------+----------+------------+\n",
+      "|code|                kenmei|gengo|wareki|seireki| chu|    sokei|jinko_male|jinko_female|\n",
+      "+----+----------------------+-----+------+-------+----+---------+----------+------------+\n",
+      "|  00|                  全国| 平成|     2|   1990|null|123611167|  60696724|    62914443|\n",
+      "|  0A|          人口集中地区| 平成|     2|   1990|null| 78152452|  38564229|    39588223|\n",
+      "|  0B|人口集中地区以外の地区| 平成|     2|   1990|null| 45458715|  22132495|    23326220|\n",
+      "|  01|                北海道| 平成|     2|   1990|null|  5643647|   2722988|     2920659|\n",
+      "|  02|                青森県| 平成|     2|   1990|null|  1482873|    704758|      778115|\n",
+      "|  03|                岩手県| 平成|     2|   1990|null|  1416928|    680197|      736731|\n",
+      "|  04|                宮城県| 平成|     2|   1990|null|  2248558|   1105103|     1143455|\n",
+      "|  05|                秋田県| 平成|     2|   1990|null|  1227478|    584678|      642800|\n",
+      "|  06|                山形県| 平成|     2|   1990|null|  1258390|    607041|      651349|\n",
+      "|  07|                福島県| 平成|     2|   1990|null|  2104058|   1024354|     1079704|\n",
+      "|  08|                茨城県| 平成|     2|   1990|null|  2845382|   1419117|     1426265|\n",
+      "|  09|                栃木県| 平成|     2|   1990|null|  1935168|    962571|      972597|\n",
+      "|  10|                群馬県| 平成|     2|   1990|null|  1966265|    971704|      994561|\n",
+      "|  11|                埼玉県| 平成|     2|   1990|null|  6405319|   3245868|     3159451|\n",
+      "|  12|                千葉県| 平成|     2|   1990|null|  5555429|   2802774|     2752655|\n",
+      "|  13|                東京都| 平成|     2|   1990|null| 11855563|   5969773|     5885790|\n",
+      "|  14|              神奈川県| 平成|     2|   1990|null|  7980391|   4098147|     3882244|\n",
+      "|  15|                新潟県| 平成|     2|   1990|null|  2474583|   1200376|     1274207|\n",
+      "|  16|                富山県| 平成|     2|   1990|null|  1120161|    538640|      581521|\n",
+      "|  17|                石川県| 平成|     2|   1990|null|  1164628|    562684|      601944|\n",
+      "+----+----------------------+-----+------+-------+----+---------+----------+------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.where(df.gengo == \"平成\").show()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 9:>                                                          (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+----------------------+--------------------+--------------------+\n",
+      "|                kenmei|            male_avg|          female_avg|\n",
+      "+----------------------+--------------------+--------------------+\n",
+      "|人口集中地区以外の地区|2.0976203166666668E7|2.2272045166666668E7|\n",
+      "|                佐賀県|            408192.5|            456442.5|\n",
+      "|                栃木県|   987741.8333333334|            999415.5|\n",
+      "|                京都府|  1268325.3333333333|  1360099.3333333333|\n",
+      "|                香川県|   485871.8333333333|   523763.6666666667|\n",
+      "|                愛媛県|   692188.3333333334|   774376.1666666666|\n",
+      "|                秋田県|   542928.3333333334|            604578.5|\n",
+      "|                広島県|           1387308.5|  1478006.8333333333|\n",
+      "|                宮崎県|            542386.5|            608793.0|\n",
+      "|              鹿児島県|            818506.0|            929134.0|\n",
+      "|                埼玉県|  3492880.3333333335|  3443447.8333333335|\n",
+      "|                三重県|            893167.5|   944959.6666666666|\n",
+      "|                島根県|            356034.5|   388621.6666666667|\n",
+      "|                徳島県|   383399.1666666667|            423152.0|\n",
+      "|                岐阜県|  1009389.1666666666|  1073025.1666666667|\n",
+      "|                新潟県|           1175463.5|  1249345.3333333333|\n",
+      "|                山形県|            583603.5|   627811.6666666666|\n",
+      "|              神奈川県|           4360756.0|           4252978.5|\n",
+      "|                群馬県|   986385.1666666666|  1013610.6666666666|\n",
+      "|                岩手県|   659592.6666666666|   714973.1666666666|\n",
+      "+----------------------+--------------------+--------------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "import pyspark.sql.functions as sf\n",
+    "df.where(df.gengo == \"平成\").groupBy(\"kenmei\")\\\n",
+    "    .agg(sf.avg(\"jinko_male\").alias(\"male_avg\"),sf.avg(\"jinko_female\").alias(\"female_avg\")).show() "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_after_t = df.where(df.gengo == \"平成\").groupBy(\"kenmei\")\\\n",
+    "    .agg(sf.avg(\"jinko_male\").alias(\"male_avg\"),sf.avg(\"jinko_female\").alias(\"jinko_female_avg\"))\\\n",
+    "        .filter(df.kenmei != \"人口集中地区以外の地区\").sort(\"male_avg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+--------+-----------------+-----------------+\n",
+      "|  kenmei|         male_avg| jinko_female_avg|\n",
+      "+--------+-----------------+-----------------+\n",
+      "|  鳥取県|287885.3333333333|314291.3333333333|\n",
+      "|  島根県|         356034.5|388621.6666666667|\n",
+      "|  高知県|372268.1666666667|         418517.0|\n",
+      "|  徳島県|383399.1666666667|         423152.0|\n",
+      "|  福井県|         395512.5|420182.6666666667|\n",
+      "|  佐賀県|         408192.5|         456442.5|\n",
+      "|  山梨県|425777.8333333333|441831.1666666667|\n",
+      "|  香川県|485871.8333333333|523763.6666666667|\n",
+      "|和歌山県|         490624.0|547112.3333333334|\n",
+      "|  富山県|         532857.0|573049.8333333334|\n",
+      "|  宮崎県|         542386.5|         608793.0|\n",
+      "|  秋田県|542928.3333333334|         604578.5|\n",
+      "|  石川県|         566064.0|         604518.5|\n",
+      "|  大分県|571530.6666666666|638773.6666666666|\n",
+      "|  山形県|         583603.5|627811.6666666666|\n",
+      "|  沖縄県|         654622.0|679050.6666666666|\n",
+      "|  岩手県|659592.6666666666|714973.1666666666|\n",
+      "|  滋賀県|         662391.0|         680326.0|\n",
+      "|  奈良県|671178.6666666666|734736.6666666666|\n",
+      "|  青森県|675238.6666666666|751182.1666666666|\n",
+      "+--------+-----------------+-----------------+\n",
+      "only showing top 20 rows\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_after_t.show()"
+   ]
   }
  ],
  "metadata": {
