キャッシュについて

--- a/test.ipynb
+++ b/test.ipynb
@@ -923,7 +923,7 @@
    ],
    "source": [
     "#hint文でスモールファイル問題の解決 /** repartition(1) */ 忘れずに\n",
-    "\n",
+    "#df2 でキャッシュ\n",
     "df2 = spark.sql(\n",
     "   \"\"\"\n",
     "   insert overwrite table jinko_avg partition(kenmei)\n",
@@ -989,7 +989,59 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#localhost:4040から"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "22/07/21 09:36:12 WARN CacheManager: Asked to cache already cached data.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df2.cache()\n",
+    "df2.is_cached"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#テーブルをキャッシュ\n",
+    "spark.catalog.cacheTable(\"jinko_avg\")\n",
+    "spark.catalog.isCached(\"jinko_avg\")"
+   ]
   }
  ],
  "metadata": {
